--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "3.6"
   - "3.7"
+install:
+ - pip install -r requirements.txt
 script:
-  - pytest
+ - python -m unittest discover -p "*_test.py"
