--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,5 @@ language: python
 python:
   - "3.6"
   - "3.7"
-install:
- - pip install -r requirements.txt
 script:
- - python -m unittest discover -p "*_test.py"
+ - py -m unittest discover -p "*_test.py"
