--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 language: python
+
 python:
   - "3.6"
   - "3.7"
+
+git:
+  depth: 1
+
+install:
+  - pip install codecov
+
 script:
   - pytest
+  - coverage run fraction_test.py
+
+after_success:
+  - codecov
